Fixed overflow behavior and gave add task btn basic functionality

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -22,13 +22,34 @@
         .app-main-content {
             // background-color: pink; // for testing
             flex: 1;
+            overflow: hidden;
         }
     }
 }
 
+.task-container {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    position: relative;
+}
+
 .task-list {
     height: 100%;
-    position: relative;
+    // width: 100%;
+    // padding: 0;
+    // margin: 0;
+
+    overflow-y: auto;
+    overflow-x: visible;
+
+    // Hide scroll bar for:
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.task-list::-webkit-scrollbar {
+    display: none;
 }
 
 .add-task-btn {
